--- a/src/components/ProductCart/_productCart.scss
+++ b/src/components/ProductCart/_productCart.scss
@@ -3,36 +3,47 @@
 @import "../../styles/fonts-settings";
 
 .productCart-product-info {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: space-around;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-around;
+  align-items: center;
+  /*border: solid 1px rgb(168, 163, 163);*/
 }
 
 .productCart-producto {
   margin: 10px 200px;
   display: flex;
   flex-direction: row;
+  border: solid 1px rgb(168, 163, 163);
 }
 .productCart-product-image {
   margin: 10px;
+  h2 {
+    margin-top: 20px;
+  }
   img {
     width: 150px;
     height: 150px;
   }
 }
-
-.productCart-product-info {
-    margin: 10px;
+.productCart-info-product {
+  margin: 10px;
+  align-items: start;
+  a {
+    Button {
+      margin-top: 10px;
+      width: 80px;
+    }
+  }
 }
 
 .productCart-info {
-    h2 {
-        margin: 10px;
-    }
-    a {
-        margin: 10px;
-    }
+  h2 {
+    margin: 10px;
+  }
+  a {
+    margin: 10px;
+  }
 }
