--- a/src/layout/mainLayout.scss
+++ b/src/layout/mainLayout.scss
@@ -3,6 +3,11 @@
 .main {
   height: auto;
   min-height: 100vh;
+
+  @media screen and (min-width: 951px) and (max-width: 1399px) {
+    height: auto;
+    min-height: 80vh;
+  }
 }
 
 .mainContainer {
