--- a/src/components/GalleryImages/galleryImages.module.scss
+++ b/src/components/GalleryImages/galleryImages.module.scss
@@ -1,35 +1,45 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
+
 .container {
   background-color: $white;
+  margin: 2em 1em;
 
   .gallery {
-    columns: 4 200px;
+    columns: 5 200px;
     column-gap: 0.5em;
 
     @include mobile-tablet {
-      columns: 2 50%;
+      columns: 5 150px;
       column-gap: 0.5em;
     }
+    :hover > .description {
+      opacity: 1;
+      visibility: visible;
 
+      h3 {
+        margin-top: 70px;
+        margin-bottom: 15px;
+      }
+
+      .img {
+        transform: scale(1.3);
+      }
+    }
     .overlay {
       position: relative;
       cursor: pointer;
       overflow: hidden;
-      width: 90% auto;
-      height: auto; 
 
       .img {
-        width: 100%;
-        height: auto; 
-        max-height: 40vh; 
+        max-width: 100%;
         display: block;
         outline: 2px solid $white;
         outline-offset: -10px;
         background-color: $primary-color;
         transition: all 400ms ease-out;
         will-change: transform;
-        
+
         :hover {
           transform: scale(1.3);
         }
