--- a/src/views/EnterpriseDetail/enterpriseDetail.module.scss
+++ b/src/views/EnterpriseDetail/enterpriseDetail.module.scss
@@ -71,3 +71,10 @@
     padding: 1em;
   }
 }
+
+.mainContent {
+  // Estilos para la segunda columna
+  background-color: #ffffff;
+  padding: 40px 30px;
+  text-align: center;
+}
