--- a/src/components/ProductsEcommerce/_productsEcommerce.scss
+++ b/src/components/ProductsEcommerce/_productsEcommerce.scss
@@ -1,30 +1,22 @@
-
 @import "../../styles/colors";
 @import "../../styles/media-queries";
 @import "../../styles/fonts-settings";
 
-
 .product-container {
- /*  max-width: 100%; */
   padding: 30px 0;
   width: 100%;
-
 }
 
 .discounted-price {
   font-weight: bold;
-  color: red
+  color: red;
 }
 
-
 .product-grid {
-  /* display: grid;
-  grid-template-columns: repeat(3, minmax(33%, 1fr)); */
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
-  /* padding: 5px; */
 }
 
 .product-card {
@@ -37,17 +29,30 @@
   text-align: center;
   position: relative;
   width: 250px;
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .imageCardProduct {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    border-radius: 8px;
+    overflow: hidden;
+    object-fit: contain;
+    margin: 0 !important;
+    img {
+      width: 100%;
+      object-fit: contain;
+      height: auto;
+      cursor: pointer;
+    }
+  }
 }
 
 .product-card:hover {
   transform: translateY(-5px);
-}
-
-.product-image {
-  width: 50%;
-  height: auto;
-  cursor: pointer;
 }
 
 .product-info {
@@ -55,21 +60,24 @@
 }
 
 .product-title {
-  font-size: 20px;
+  font-size: 16px;
+  font-weight: 700;
   margin: 10px 0;
   text-transform: uppercase;
+  color: $dark-gray;
 }
 
 .product-description {
-  font-size: 16px;
-  color: $dark-gray;
+  font-size: 15px;
+
+  color: $ligth-gray;
   margin-bottom: 10px;
-  
 }
 
 .product-price {
   font-size: 18px;
   font-weight: bold;
+  color: $dark-gray;
 }
 
 .imagen-ampliada {
@@ -88,7 +96,7 @@
   max-width: 80%;
   max-height: 80%;
   margin: auto;
-  padding-top:4em;
+  padding-top: 4em;
   position: absolute;
   top: 0;
   left: 0;
@@ -106,11 +114,9 @@
 }
 
 @include mobile {
-
   .product-container {
     /*  max-width: 100%; */
-     padding: 10px 0;
-     width: 100%;
-   
-   }
+    padding: 10px 0;
+    width: 100%;
+  }
 }
